[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/HUD.gd" type="Script" id=1]
[ext_resource path="res://res/fonts/ConnectionII.tres" type="DynamicFont" id=2]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 40.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="RestartButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = 70.0
margin_right = 61.5
margin_bottom = 106.0
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = 130.0
margin_right = 34.5
margin_bottom = 166.0
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -80.0
margin_right = 82.5
margin_bottom = -17.0
custom_fonts/font = ExtResource( 2 )
text = "Game Over
Score:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsLeft" type="Particles2D" parent="."]
position = Vector2( 112.6, -90.6606 )
emitting = false
amount = 100
lifetime = 4.1
preprocess = 10.0
visibility_rect = Rect2( -100, -100, 200, 1000 )
local_coords = false
process_material = SubResource( 1 )

[node name="StarsCentre" type="Particles2D" parent="."]
position = Vector2( 320.255, -90.6606 )
emitting = false
amount = 100
lifetime = 4.1
preprocess = 10.0
visibility_rect = Rect2( -100, -100, 200, 1000 )
local_coords = false
process_material = SubResource( 1 )

[node name="StarsRight" type="Particles2D" parent="."]
position = Vector2( 528.969, -89.6011 )
emitting = false
amount = 100
lifetime = 4.1
preprocess = 10.0
visibility_rect = Rect2( -100, -100, 200, 1000 )
local_coords = false
process_material = SubResource( 1 )

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
